[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.6.3",
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "snowflake-id>=1.0.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
]
