[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "botocore>=1.43.12",
    "celery[redis]>=5.6.3",
    "fastapi>=0.136.1",
    "litellm>=1.60.0",
    "loguru>=0.7.3",
    "mypy>=2.1.0",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "rich>=15.0.0",
    "ruff>=0.15.14",
    "snowflake-id>=1.0.2",
    "sqlmodel>=0.0.38",
    "ty>=0.0.38",
    "uvicorn>=0.47.0",
]
